--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-node --build-arg FAVORITE_FOOD=${FAVORITE_FOOD}
+  - docker build -t simple-node --build-arg FAVORITE_FOOD=${FAVORITE_FOOD} .
   - docker tag simple-node ismaelbernal83/simple-node:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
